--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,10 @@ margin-right: 30px;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
+  margin: left;
+  text-align: center;
 }
+
 button{
   background-color: black;
   color: white;
